--- a/src/app/search-form/search-form.html
+++ b/src/app/search-form/search-form.html
@@ -40,6 +40,6 @@
   </mat-form-field>
 
   <button mat-raised-button color="accent" type="submit" [disabled]="!searchForm.valid">
-    Buscar Habitaciones
+    🔍 Buscar
   </button>
 </form>
