--- a/src/app/app.css
+++ b/src/app/app.css
@@ -2,13 +2,13 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #f4f4f4;
-  color: #333;
+  background-color: var(--color-fondo-claro);
+  color: var(--color-texto);
 }
 
 header {
-  background-color: #020a12; 
-  color: rgb(146, 240, 245);
+  background-color: var(--color-primario); 
+  color: white;
   padding: 1em 2em;
   display: flex;
   justify-content: space-between;
@@ -37,7 +37,7 @@ main {
 }
 
 .hero-section {
-  background-color: #e0f2f7; 
+  background-color: var(--color-secundario); 
   background-image: url('https://cdn.pixabay.com/photo/2016/01/02/13/17/hotel-1118187_1280.jpg');
   background-size: cover;
   background-position: center;
@@ -69,7 +69,7 @@ main {
 
 
 .hero-section button {
-  background-color: #289aa7; 
+  background-color: var(--color-acento); 
   color: white;
   border: none;
   padding: 1em 2em;
@@ -80,7 +80,7 @@ main {
 }
 
 .hero-section button:hover {
-  background-color: #218838;
+  background-color: var(--color-primario);
 }
 
 .booking-form-section, .about-section {
@@ -92,7 +92,7 @@ main {
 }
 
 .booking-form-section h2, .about-section h2 {
-  color: #000000;
+  color: var(--color-primario);
   text-align: center;
   margin-bottom: 1em;
 }
@@ -106,7 +106,7 @@ main {
 }
 
 footer {
-  background-color: #333;
+  background-color: var(--color-primario);
   color: white;
   text-align: center;
   padding: 1.5em 0;
