--- a/src/app/rooms/rooms.html
+++ b/src/app/rooms/rooms.html
@@ -16,11 +16,8 @@
         </div>
         
         <div class="room-header">
-          <h3>{{ room.name }}</h3>
-        </div>
-        
-        <div class="room-description">
-          <p>{{ room.description }}</p>
+          <h3>{{ room.description }}</h3>
+          <p class="room-number" *ngIf="room.name">Habitación {{ room.name }}</p>
         </div>
         
         <div class="room-details">
@@ -32,7 +29,15 @@
           
           <div class="room-info">
             <p><strong>Capacidad:</strong> {{ room.capacity }} persona(s)</p>
-            <p><strong>Tipo:</strong> {{ room.typeRoomId.substring(0, 8) }}...</p>
+            <div *ngIf="room.amenities && room.amenities.length > 0" class="amenities">
+              <strong>Amenidades:</strong>
+              <ul>
+                <li *ngFor="let amenity of room.amenities">
+                  <span class="amenity-name">{{ amenity.name }}</span>
+                  <span class="amenity-desc" *ngIf="amenity.description">- {{ amenity.description }}</span>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
         
@@ -49,4 +54,12 @@
       <p>No hay habitaciones disponibles en este momento.</p>
     </div>
   </section>
+
+  <!-- Modal de disponibilidad -->
+  <app-availability-modal 
+    *ngIf="showModal && selectedRoom"
+    [roomId]="selectedRoom.id"
+    [roomName]="selectedRoom.description"
+    (close)="closeModal()">
+  </app-availability-modal>
 </div>
